This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Fix typo of Py_SET_ERANGE_IF_OVERFLOW in pyport.h
Type: Stage: resolved
Components: Documentation Versions: Python 3.9, Python 3.8, Python 3.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: docs@python Nosy List: benjamin.peterson, docs@python, miss-islington, shihai1991
Priority: normal Keywords: patch

Created on 2019-09-22 16:03 by shihai1991, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 16230 merged shihai1991, 2019-09-22 16:04
PR 16342 merged miss-islington, 2019-09-24 02:21
PR 16343 merged miss-islington, 2019-09-24 02:21
PR 16344 merged miss-islington, 2019-09-24 02:21
Messages (5)
msg352981 - (view) Author: Hai Shi (shihai1991) * (Python triager) Date: 2019-09-22 16:03
Py_SET_ERANGE_ON_OVERFLOW should be changed to Py_SET_ERANGE_IF_OVERFLOW in pyport.h.
msg353047 - (view) Author: Benjamin Peterson (benjamin.peterson) * (Python committer) Date: 2019-09-24 02:21
New changeset 4346bad3321699d49a45e3446270b57726ab5c8f by Benjamin Peterson (Hai Shi) in branch 'master':
closes bpo-38253: Fix typo of Py_SET_ERANGE_IF_OVERFLOW in pyport.h. (GH-16230)
https://github.com/python/cpython/commit/4346bad3321699d49a45e3446270b57726ab5c8f
msg353048 - (view) Author: miss-islington (miss-islington) Date: 2019-09-24 02:31
New changeset 7c65adf688dfadb113eec64374d8d5ccb4fc892b by Miss Islington (bot) in branch '2.7':
closes bpo-38253: Fix typo of Py_SET_ERANGE_IF_OVERFLOW in pyport.h. (GH-16230)
https://github.com/python/cpython/commit/7c65adf688dfadb113eec64374d8d5ccb4fc892b
msg353049 - (view) Author: miss-islington (miss-islington) Date: 2019-09-24 02:39
New changeset 912b5a986c4fe0f4d758d7536ce818b1ab672437 by Miss Islington (bot) in branch '3.7':
closes bpo-38253: Fix typo of Py_SET_ERANGE_IF_OVERFLOW in pyport.h. (GH-16230)
https://github.com/python/cpython/commit/912b5a986c4fe0f4d758d7536ce818b1ab672437
msg353050 - (view) Author: miss-islington (miss-islington) Date: 2019-09-24 02:41
New changeset a7c73a0094c336e5f10d9364f244be70683409ff by Miss Islington (bot) in branch '3.8':
closes bpo-38253: Fix typo of Py_SET_ERANGE_IF_OVERFLOW in pyport.h. (GH-16230)
https://github.com/python/cpython/commit/a7c73a0094c336e5f10d9364f244be70683409ff
History
Date User Action Args
2022-04-11 14:59:20adminsetgithub: 82434
2019-09-24 02:41:09miss-islingtonsetmessages: + msg353050
2019-09-24 02:39:40miss-islingtonsetmessages: + msg353049
2019-09-24 02:31:29miss-islingtonsetnosy: + miss-islington
messages: + msg353048
2019-09-24 02:21:17miss-islingtonsetpull_requests: + pull_request15921
2019-09-24 02:21:09benjamin.petersonsetstatus: open -> closed

nosy: + benjamin.peterson
messages: + msg353047

resolution: fixed
stage: patch review -> resolved
2019-09-24 02:21:08miss-islingtonsetpull_requests: + pull_request15920
2019-09-24 02:21:01miss-islingtonsetpull_requests: + pull_request15919
2019-09-22 16:04:25shihai1991setkeywords: + patch
stage: patch review
pull_requests: + pull_request15906
2019-09-22 16:03:34shihai1991create